[package]
name = "vunk-lexer"
authors.workspace = true
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
tracing.workspace = true

chumsky = "1.0.0-alpha.4"

[dev-dependencies]
paste = "1"
