[package]
name = "vunk-parser"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs"] }
tracing.workspace = true

chumsky = "0.9.2"

vunk-ast = { path = "../vunk-ast" }
vunk-lexer = { path = "../vunk-lexer" }

